--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
@@ -15,7 +15,7 @@
       <mbsc-tab-nav [options]="caseTabsSettings" class="case-sub-header">
           <mbsc-nav-item [selected]="currentTab == 'case_details'" (click)="currentTab='case_details'" translate>Ärende</mbsc-nav-item>
           <mbsc-nav-item [selected]="currentTab == 'case_actions'" (click)="currentTab='case_actions'" translate>Händelser</mbsc-nav-item>
-          <mbsc-nav-item [selected]="currentTab == 'case_workflows'" (click)="currentTab='case_workflows'" translate>Åtgärd</mbsc-nav-item>
+          <!--<mbsc-nav-item [selected]="currentTab == 'case_workflows'" (click)="currentTab='case_workflows'" translate>Åtgärd</mbsc-nav-item>-->
       </mbsc-tab-nav>
     </div>
   </mbsc-form>
