--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -151,6 +151,10 @@
             getInventoryUrl: '@Url.Action("GetInventoryUrlByName", "InventoryRouting", new {  area = "Inventory" })',
             initiatorDetailsUrl: '@Url.Action("NotifierPopup", "Notifiers")',
             checkInitiatorUrl: '@Url.Action("GetNotifierInfo", "Notifiers")'
+        },
+
+        user: {
+            hasInventoryViewPermission: '@Model.UserHasInventoryViewPermission'
         }
     };
 
