Just a commit to start build

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -170,7 +170,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            @Translation.Get("Visa på mobil", Enums.TranslationSource.TextTranslation)
+                                            @Translation.Get("Visa på mobil;", Enums.TranslationSource.TextTranslation)
                                         </td>
                                         <td class="checkbox" style="padding-left: 20px">
                                             <input type="checkbox" name="Casesolution.ShowOnMobile" @(Model.CaseSolution.ShowOnMobile != 0 ? "checked=checked" : "") value="1" />
