--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/field-change-action/field-change-action.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/field-change-action/field-change-action.component.html
@@ -1,7 +1,7 @@
   <div *ngIf="data" class="change">
       <span class="{{ getActionIcon() }}"></span>
       <ng-container *ngIf="showField;else noAction">
-          <b>{{ data.fieldLabel }}</b>: <span [innerHTML]="formattedValue"></span>
+          <b>{{ data.fieldLabel }}</b>&nbsp;<span [innerHTML]="formattedValue"></span>
       </ng-container>
   </div>
 
