--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files-upload/case-files-upload.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files-upload/case-files-upload.component.html
@@ -11,7 +11,7 @@
 <div id="casefilesupload">
     <label for="fileupload">
         <input type="file"  id="fileupload" name="fileupload" class="fileupload"
-               #fileupload ng2FileSelect [uploader]="fileUploader" multiple />
+               ng2FileSelect [uploader]="fileUploader" multiple />
         <span class="mbsc-btn mbsc-btn-ic mbsc-ic mbsc-ic-fa-upload" translate>Bifoga</span>
     </label>
 </div>
