--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.scss
@@ -1,7 +1,6 @@
 :host {
     overflow: hidden;
-    display:block;
-    padding: 10px 20px;
+    display:block;    
     background: none #fff;
     font-family: Verdana, Arial, Sans-Serif;
     border-top:1px solid #ccc;
@@ -11,11 +10,9 @@
     .case-subsection-title {
         font-size:12px;
         color: #020202;
+        padding:10px 20px;
     }
 }
-
-ul.filelist { 
-    list-style:  none none;
-    padding:0px;
-    margin:10px 0px;    
+.fileList {
+  padding: 10px 20px;
 }
