--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.html
@@ -1,4 +1,4 @@
-<div id="logFilesUpload">  
+<div>  
   <label for="logfileupload">
       <input type="file" id="logfileupload" name="logfileupload" class="fileupload"
               ng2FileSelect [uploader]="fileUploader" multiple />
