--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files-upload/case-files-upload.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files-upload/case-files-upload.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: block!important;  
 }
+
 input.fileupload {  
     width: 0.1px;
     height: 0.1px;
@@ -11,9 +12,14 @@ input.fileupload {
 }
 
 label {
+   background: #F2F3F3;
    font-size: 16px;
    display: block;
-   text-align: right;   
+   text-align: right;
+
+   span.mbsc-btn {
+    margin-right:10px;
+  }
 }
 
 .mbsc-ic:before {
