--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: block!important;  
+}
+
 input.fileupload {  
   width: 0.1px;
   height: 0.1px;
@@ -8,10 +12,19 @@ input.fileupload {
 }
 
 label {
+  background: #F2F3F3;
   font-size: 16px;
   display: block;
-  text-align: right;   
+  text-align: right;
+  
+  span.mbsc-btn {
+    color:#1272dc!important;
+    margin-right:10px;
+    z-index: 999;
+  }
 }
+
+
 
 .mbsc-ic:before {
  margin-right:10px;
