#66534	Actions/Händelser - UI. Issue fixed.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
@@ -1,6 +1,6 @@
-<mbsc-form class="mbsc-padding md-load-btn md-btn-isLoading" [hidden]="isLoaded">
-    <mbsc-button flat block icon="loop2" ></mbsc-button>
-</mbsc-form>
+<div class="mbsc-padding md-load-btn md-btn-isLoading" [hidden]="isLoaded">
+     <mbsc-button flat block data-icon="fa-spinner"></mbsc-button>
+</div>
 
 <div id="case-actions" *ngIf="grouppedItems && grouppedItems.length">
   <mbsc-card *ngFor="let group of grouppedItems;trackBy:getTrackId" [class.owner]="isActionOwner(group.CreatedByUserId)">
