--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
@@ -7,5 +7,7 @@
           (click)="downloadFile(item)">{{ item.fileName }}</mbsc-listview-item>
       </mbsc-listview>
   </div>
-  <case-files-upload [caseKey]='caseKey'></case-files-upload>
+   
+  <case-files-upload *ngIf="hasFullAccess" [caseKey]='caseKey' (NewFileUploadComplete)="processNewFileUpload($event)"></case-files-upload>
+  
 </div>
