--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1595,15 +1595,12 @@
                                         {
                                             <tr class="displaytr" style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.Filename, CaseSolutionFields.FileName)">
                                                 @*<tr class="displaytr" style="@Model.caseFieldSettings.displayHtml(GlobalEnums.TranslationCaseFields.Filename.ToString())">*@
-                                                <td>
-                                                    @CaseFieldCaption(GlobalEnums.TranslationCaseFields.Filename, "Bifogad fil")
-                                                </td>
+                                                <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.Filename, "Bifogad fil")</td>
                                                 <td colspan="2">
                                                     @if (Model.EditMode == AccessMode.FullAccess)
                                                     {
                                                         <a id="btnAddCaseFile" href="#upload_files_popup" role="button" class="btn" data-toggle="modal">@Translation.Get("Lägg till", SessionFacade.CurrentLanguageId)</a>
                                                         <a href="#upload_clipboard_file_popup" role="button" class="btn" data-src="case">@Translation.Get("Lägg till från Urklipp", SessionFacade.CurrentLanguageId)</a>
-
                                                     }
                                                     <div id="divCaseFiles">
                                                         @Html.Partial("_CaseFiles", Model.CaseFilesModel, new ViewDataDictionary { { "CaseInactive", Model.case_.FinishingDate.HasValue } })
@@ -2324,9 +2321,7 @@
                                 @Html.Partial("_CaseInformation", Model, new ViewDataDictionary { { "Headline", Translation.GetMasterDataTranslation(extendedCase.Name) } })
                                 @*<div>@extendedCase.Version</div>*@
                             </div>
-
                         </div>
-
                     }
                 }
 
