#68505 - Opening attachments in iPhone from homepage bookmark

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
@@ -1,5 +1,5 @@
 <div class="mbsc-padding md-load-btn md-btn-isLoading" [hidden]="isLoaded">
-     <mbsc-button flat block data-icon="fa-spinner"></mbsc-button>
+     <mbsc-button flat block icon="loop2">Loading</mbsc-button>
 </div>
 
 <div id="case-actions" *ngIf="grouppedItems && grouppedItems.length">
