--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
@@ -1,8 +1,8 @@
 <mbsc-form class="mbsc-padding md-load-btn md-btn-isLoading" [hidden]="isLoaded">
-    <mbsc-button flat block icon="loop2" ></mbsc-button>
+    <mbsc-button flat block icon="loop2">Loading</mbsc-button>
 </mbsc-form>
 
-<mbsc-form *ngIf="isLoaded">
+<mbsc-form *ngIf="isLoaded">  
     <div id="case-header">
       <mbsc-tab-nav [options]="titleTabsSettings" class="case-header">
           <mbsc-nav-item selected="false" (click)="goToCases()" translate>Avbryt</mbsc-nav-item>
