--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
@@ -1,5 +1,5 @@
 <mbsc-form class="mbsc-padding md-load-btn md-btn-isLoading" [hidden]="isLoaded">
-    <mbsc-button flat block icon="loop2">Loading</mbsc-button>
+    <mbsc-button flat block icon="fa-refresh"></mbsc-button>
 </mbsc-form>
 
 <mbsc-form *ngIf="isLoaded">  
