--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <mbsc-bottom-nav [options]="bottomMenuSettings">
     <mbsc-nav-item data-icon="fa-home" (click)="goTo('/')" translate>Hem</mbsc-nav-item>
-    <mbsc-nav-item data-icon="fa-plus" (click)="goTo()" [disabled]="true" translate>Lägg till</mbsc-nav-item>
+    <mbsc-nav-item data-icon="fa-plus" (click)="newCasePopup.instance.show()" [disabled]="templates.length === 0 "  translate>Lägg till</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-list" (click)="caseSearchPopup.instance.show()" translate>Översikt</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-globe" [disabled]="!languageId && !isLoadingLanguage" (click)="openLanguages()" translate>Språk</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-power-off" (click)="logout()" translate>Logga ut</mbsc-nav-item>
@@ -8,9 +8,15 @@
 
 <mbsc-select [(ngModel)]="languageId" [options]="languagesSettings" #languages hidden></mbsc-select>
 
-<mbsc-popup [options]="popUpLlistSettings" #caseSearchPopup="mobiscroll">
-    <mbsc-listview [options]="popUpLvSettings">
+<mbsc-popup [options]="popupMenuSettings" #caseSearchPopup="mobiscroll">
+    <mbsc-listview [options]="menuListSettings">
         <mbsc-listview-item (click)="goToCases(SearchType.AllCases)" translate>Alla ärenden</mbsc-listview-item>
         <mbsc-listview-item (click)="goToCases(SearchType.MyCases)" translate>Mina ärenden</mbsc-listview-item>
+    </mbsc-listview>
+</mbsc-popup>
+
+<mbsc-popup [options]="popupMenuSettings" #newCasePopup="mobiscroll">
+    <mbsc-listview [options]="menuListSettings">
+        <mbsc-listview-item *ngFor="let template of templates">{{ template.name }}</mbsc-listview-item>
     </mbsc-listview>
 </mbsc-popup>
