--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -156,11 +156,8 @@
 
                 @if (Model.CaseInternalLogAccess)
                 {
-
                     <tr style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote)">
-                        <td>
-                            @CaseFieldCaption(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, "Intern notering")
-                        </td>
+                        <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, "Intern notering")</td>
                         <td>
                             @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
                             {
