#68674 - Create cases based on templates - UI - Apply template;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
@@ -17,6 +17,7 @@
 
 <mbsc-popup [options]="popupMenuSettings" #newCasePopup="mobiscroll">
     <mbsc-listview [options]="menuListSettings">
-        <mbsc-listview-item *ngFor="let template of templates">{{ template.name }}</mbsc-listview-item>
+        <mbsc-listview-item *ngFor="let template of templates" (click) ="newCasePopup.instance.hide()"
+           [routerLink]="['/case/template', template.caseSolutionId]">{{ template.name }}</mbsc-listview-item>
     </mbsc-listview>
 </mbsc-popup>
