#68674 - replaced momentjs with luxon to reduce size

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
@@ -9,7 +9,7 @@
         <div class="mbsc-grid mbsc-margin mbsc-txt-muted mbsc-bold mbsc-txt-s">
           <div class="mbsc-row mbsc-no-padding">
             <div class="mbsc-col-6 time">
-                <span><i class="mbsc-ic mbsc-ic-fa-clock-o"></i> {{ group.createdAt | dateTz: 'L HH:mm'}}</span>
+                <span><i class="mbsc-ic mbsc-ic-fa-clock-o"></i> {{ group.createdAt | dateTimeFormat }}</span>
             </div>
             <div class="mbsc-col-6 mbsc-bold author">{{ group.createdBy }}</div>
           </div>
