--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-datetime-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-datetime-control.component.html
@@ -1,2 +1,2 @@
 <!-- <mbsc-datetime #datetime [(ngModel)]="value" [options]="options" [hidden]="options.disabled">{{ field.label }}</mbsc-datetime> -->
-<mbsc-input #control [ngModel]="value | dateTz">{{ field.label }}</mbsc-input>
+<mbsc-input #control [ngModel]="value | dateTimeFormat">{{ field.label }}</mbsc-input>
