--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
@@ -25,7 +25,7 @@
         <mbsc-listview #listview [options]="listviewSettings" [hidden]="isLoading" (onItemTap)="onItemTap($event)" (touchmove)="checkLoad()">
                 <mbsc-listview-item *ngFor="let case of cases; trackBy: trackByFn" >
                         <div class="row ellipsis">{{ (case.columns | getByKey: 'Caption') || '&nbsp;' }}</div>
-                        <div class="secondary">{{ (case.columns | getByKey: 'CaseNumber') || '&nbsp;' }} {{ (case.columns | getByKey: 'RegTime' | dateTz: 'L') || '&nbsp;' }}</div>
+                        <div class="secondary">{{ (case.columns | getByKey: 'CaseNumber') || '&nbsp;' }} {{ (case.columns | getByKey: 'RegTime' | dateFormat) || '&nbsp;' }}</div>
                 </mbsc-listview-item>
         </mbsc-listview>
         <mbsc-form #loading class="md-load-btn md-btn-isLoading">
