Mobile: fixed loading screen on caseoverview, login

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
@@ -30,6 +30,6 @@
         </mbsc-listview>
         <mbsc-form #loading class="md-load-btn md-btn-isLoading">
                 <div style="height:44px;" [hidden]="isLoading"></div>
-                <mbsc-button flat block icon="loop2" [hidden]="!isLoading"></mbsc-button>
+                <mbsc-button flat block icon="fa-refresh" [hidden]="!isLoading"></mbsc-button>
         </mbsc-form>
 </div>
