--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
@@ -16,9 +16,9 @@
                 </div>
                 <div class="mbsc-form-group-inset mbsc-padding md-load-btn">
                     <mbsc-button flat type="submit" [disabled]="loginForm.invalid" [hidden]="isLoading" class="float-right">Login</mbsc-button>
-                    <mbsc-button flat icon="loop2" [hidden]="!isLoading" class="float-right"></mbsc-button> 
+                    <mbsc-button flat icon="fa-refresh" [hidden]="!isLoading" class="float-right"></mbsc-button> 
                 </div>
-            </form>        
+            </form>
         </mbsc-form>
     </div>
 </mbsc-page>
