--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <mbsc-bottom-nav [options]="bottomMenuSettings">
     <mbsc-nav-item data-icon="fa-home" (click)="goTo('/')" translate>Hem</mbsc-nav-item>
-    <mbsc-nav-item data-icon="fa-plus" (click)="newCasePopup.instance.show()" [disabled]="templates.length === 0 "  translate>Lägg till</mbsc-nav-item>
+    <mbsc-nav-item data-icon="fa-plus" (click)="newCasePopup.instance.show()" [disabled]="templateNodes.length === 0 "  translate>Lägg till</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-list" (click)="caseSearchPopup.instance.show()" translate>Översikt</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-globe" [disabled]="!languageId && !isLoadingLanguage" (click)="openLanguages()" translate>Språk</mbsc-nav-item>
     <mbsc-nav-item data-icon="fa-power-off" (click)="logout()" translate>Logga ut</mbsc-nav-item>
@@ -10,14 +10,22 @@
 
 <mbsc-popup [options]="popupMenuSettings" #caseSearchPopup="mobiscroll">
     <mbsc-listview [options]="menuListSettings">
-        <mbsc-listview-item (click)="goToCases(SearchType.AllCases)" translate>Alla ärenden</mbsc-listview-item>
-        <mbsc-listview-item (click)="goToCases(SearchType.MyCases)" translate>Mina ärenden</mbsc-listview-item>
+        <mbsc-listview-item (click)="goToCases(searchType.AllCases)" translate>Alla ärenden</mbsc-listview-item>
+        <mbsc-listview-item (click)="goToCases(searchType.MyCases)" translate>Mina ärenden</mbsc-listview-item>
     </mbsc-listview>
 </mbsc-popup>
 
-<mbsc-popup [options]="popupMenuSettings" #newCasePopup="mobiscroll">
-    <mbsc-listview [options]="menuListSettings">
-        <mbsc-listview-item *ngFor="let template of templates" (click) ="newCasePopup.instance.hide()"
-           [routerLink]="['/case/template', template.caseSolutionId]">{{ template.name }}</mbsc-listview-item>
-    </mbsc-listview>
+<mbsc-popup [options]="newCasePopupSettings" #newCasePopup="mobiscroll">  
+  <mbsc-listview [options]="templatesListSettings" #templatesListView="mobiscroll">
+    <ng-container *ngFor="let node of templateNodes">
+        <mbsc-listview-item *ngIf="!isCategory(node)" (click) ="openTemplate(node.id)">{{ node.name }}</mbsc-listview-item>
+        <mbsc-listview-item *ngIf="isCategory(node)"><span>{{ node.name }}</span>
+          <mbsc-listview-sublist>
+            <mbsc-listview-item *ngFor="let template of node.items" (click) ="openTemplate(template.id)">
+              {{ template.name }}
+            </mbsc-listview-item>
+          </mbsc-listview-sublist>
+       </mbsc-listview-item>
+     </ng-container>
+  </mbsc-listview>
 </mbsc-popup>
