#69311 - Error when press log out;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/test/test.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/test/test.component.html
@@ -1,5 +1,15 @@
-<mbsc-card *ngFor="let item of items">
-    <mbsc-card-content>
-        {{ item }}
-    </mbsc-card-content>
-</mbsc-card> 
+<mbsc-form class="mbsc-padding">
+
+  <mbsc-listview *ngIf="templateNodes.length" #templatesListView="mobiscroll">
+    <mbsc-listview-item *ngFor="let node of templateNodes"><span>{{ node.name }}</span>
+      <mbsc-listview-sublist *ngIf="node.items && node.items.length">
+        <mbsc-listview-item *ngFor="let template of node.items">
+          {{ template.name }}
+        </mbsc-listview-item>
+      </mbsc-listview-sublist>
+    </mbsc-listview-item>
+  </mbsc-listview>
+
+
+  <mbsc-button color="primary" (click)="onLogout()">Logout</mbsc-button>    
+</mbsc-form>
